--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -2,8 +2,7 @@
 .wrapper {
     background-image: url(../img/avi-waxman-ZdtOy25eNn4-unsplash.jpg);
     // .backgroundImage(3px, 100%, bottom right, 120vh, 100%, 0);
-    .bkImg(3px, 100%, bottom right, 100vh, 100%, 0);
-    height: fit-content(100vh - 200vh);
+    .bkImg(3px, cover, bottom right, 100vh, 100%, 0);
     @media @tablet {
         height: 150vh;
     }
