--- a/less/reporting.less
+++ b/less/reporting.less
@@ -3,27 +3,27 @@
     background: url(../img/kent-rebman-Hau9TnHS130-unsplash.jpg);
     height: 120vh;
     width: 120%;
-    background-size: 100%;
-    background-position-y: center;
+    background-size: cover;
+    background-position: bottom center;
     background-repeat: no-repeat;
     position: fixed;
-    filter: blur(3px);
+    filter: blur(1px);
     z-index: -1;
     margin-top: -3%;
-    @media @tablet {
-        max-width: 125%;
-        width: 125%;
-        background-size: 125%;
-        background-position: top right;
-    }
-    @media @phone {
-        max-width: 220%;
-        width: 220%;
-        height: 200vh;
-        margin-top: -20%;
-        background-position-y: top;
-        background-position-x: 220%;
-    }
+    // @media @tablet {
+    //     max-width: 125%;
+    //     width: 125%;
+    //     background-size: 125%;
+    //     background-position: top right;
+    // }
+    // @media @phone {
+    //     max-width: 220%;
+    //     width: 220%;
+    //     height: 200vh;
+    //     margin-top: -20%;
+    //     background-position-y: top;
+    //     background-position-x: 220%;
+    // }
 }
 .reporting {
     h1 {
@@ -42,7 +42,7 @@
         padding: 1% 5%;
     }
     button {
-        margin-left: 60%;
+        margin-left: 30%;
     }
     .blocks {
         display: grid;
@@ -145,11 +145,10 @@
 }
 .wrapperAbout {
     background: url(../img/imike-stettler-OFKjrANxOXY-unsplash.jpg);
-    .bkImg(0px, 150%, bottom center, 110vh, 100%, -3%);
+    .bkImg(0px, cover, bottom center, 110vh, 100%, -10%);
     @media @tablet {
-        height: 110vh;
-        background-size: 260%;
-        background-position: top right;
+        background-position: bottom right;
+        margin-top: -15%;
     }
 }
 
@@ -184,7 +183,7 @@
             img {
                 max-width: 40%;
             }
-            @media @phone {
+            @media @tablet {
                 width: 45%;
             }
         }
